[gd_scene load_steps=14 format=3 uid="uid://duat2lerdi7a0"]

[ext_resource type="FontFile" uid="uid://ba3lduh7rj541" path="res://setting/assets/Font/Roboto/Roboto-Black.ttf" id="1_gmkyd"]
[ext_resource type="Script" path="res://loginPage/GuideScene.gd" id="1_h62ug"]
[ext_resource type="Texture2D" uid="uid://dif1jqlltv07x" path="res://setting/assets/setting/header.png" id="2_1uqit"]
[ext_resource type="Theme" uid="uid://4qcodx2tfksw" path="res://setting/src/common/themes/pure_icon.tres" id="3_6nefg"]
[ext_resource type="Texture2D" uid="uid://bf6b1b1grn7dg" path="res://chatbot/assets/images/Icon_X.png" id="4_21ngy"]
[ext_resource type="Theme" uid="uid://b8831njpc3mif" path="res://setting/src/common/themes/text_icon.tres" id="5_57vxb"]
[ext_resource type="Texture2D" uid="uid://clvv3c8tsqimo" path="res://loginPage/img/guidePictures/1.png" id="7_3hwj3"]
[ext_resource type="AudioStream" uid="uid://ccteyvjw8o0k5" path="res://setting/assets/audio/button2.wav" id="8_7fdds"]
[ext_resource type="AudioStream" uid="uid://bfw0lbjbdiljx" path="res://setting/assets/audio/cancel2.wav" id="9_0i07i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8o57t"]
content_margin_top = 10.0
texture = ExtResource("2_1uqit")
texture_margin_left = 29.0
texture_margin_top = 16.0
texture_margin_right = 31.0
texture_margin_bottom = 13.0
modulate_color = Color(0.968627, 0.607843, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jseci"]
content_margin_left = 70.0
content_margin_top = 10.0
content_margin_right = 70.0
content_margin_bottom = 20.0
bg_color = Color(0.905882, 0.866667, 0.803922, 1)
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo373"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.905882, 0.866667, 0.803922, 1)
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 12
shadow_size = 20

[sub_resource type="Theme" id="Theme_lniwx"]

[node name="GuideScene" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_h62ug")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1927.0
offset_bottom = 1091.0
color = Color(0.145098, 0.145098, 0.145098, 0.572549)

[node name="Header" type="Label" parent="."]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17
anchor_top = 0.05
anchor_right = 0.83
anchor_bottom = 0.15
offset_left = -141.4
offset_right = 160.4
offset_bottom = 1.0
theme_override_colors/font_shadow_color = Color(0.207843, 0.207843, 0.207843, 1)
theme_override_fonts/font = ExtResource("1_gmkyd")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_8o57t")
text = "Guide"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.27
anchor_right = 0.95
anchor_bottom = 0.82
offset_left = -0.304077
offset_top = 0.0200005
offset_right = 179.28
offset_bottom = 147.62
scale = Vector2(0.271546, 0.269291)
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_6nefg")
icon = ExtResource("4_21ngy")

[node name="Back" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.9
offset_left = 469.842
offset_top = 265.429
offset_right = 1806.84
offset_bottom = 1124.43
rotation = -0.1309
scale = Vector2(0.95, 0.95)
pivot_offset = Vector2(960, 540)
theme_override_styles/panel = SubResource("StyleBoxFlat_jseci")

[node name="Body" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.9
offset_left = 200.0
offset_top = 159.0
offset_right = 1740.0
offset_bottom = 1046.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jseci")

[node name="Body2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.3
anchor_right = 0.76
anchor_bottom = 0.8
offset_left = 198.0
offset_top = 134.0
offset_right = 1743.0
offset_bottom = 1046.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oo373")

[node name="Next" type="Button" parent="."]
layout_mode = 0
offset_left = 1616.0
offset_top = 973.0
offset_right = 1703.0
offset_bottom = 1014.0
theme = ExtResource("5_57vxb")
text = "next"

[node name="Prev" type="Button" parent="."]
layout_mode = 0
offset_left = 1504.0
offset_top = 972.0
offset_right = 1594.0
offset_bottom = 1013.0
theme = ExtResource("5_57vxb")
text = "prev"

[node name="Skip" type="Button" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 974.0
offset_right = 341.0
offset_bottom = 1015.0
theme = ExtResource("5_57vxb")
text = "Skip"

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 263.0
offset_top = 179.0
offset_right = 1685.0
offset_bottom = 952.0
color = Color(0.0823529, 0.564706, 0.74902, 1)

[node name="Picture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 195.0
offset_right = 1666.0
offset_bottom = 939.0
theme = SubResource("Theme_lniwx")
texture = ExtResource("7_3hwj3")
expand_mode = 1

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7fdds")
bus = &"Sound"

[node name="CancelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0i07i")
bus = &"Sound"

[connection signal="pressed" from="Header/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
